FIXED SWAGGER
